src/main/default/objects/DNBI__Decision_Rules__c/DNBI__Decision_Rules__c.object-meta.xml
<CustomObject>
    <label>Decision Rules</label>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Decision Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>