src/main/default/objects/DNBI__Decision_Rules__c/fields/DNBI__Account__c.field-meta.xml
<CustomField>
    <fullName>DNBI__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Decision Rules</relationshipLabel>
    <relationshipName>Account_Decision_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>