src/main/default/objects/DNBI__Decision_Rules__c/fields/DNBI__Application_Value__c.field-meta.xml
<CustomField>
    <fullName>DNBI__Application_Value__c</fullName>
    <formula>DNBI__Currency__c + &apos; &apos; + DNBI__ApplicationValue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Value</label>
    <type>Text</type>
</CustomField>