src/main/default/objects/DNBI__Decision_Rules__c/fields/DNBI__ApplicationValue__c.field-meta.xml
<CustomField>
    <fullName>DNBI__ApplicationValue__c</fullName>
    <label>ApplicationValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>