src/main/default/objects/DNBI__Decision_Rules__c/fields/DNBI__Contract__c.field-meta.xml
<CustomField>
    <fullName>DNBI__Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contract Decision Rules</relationshipLabel>
    <relationshipName>Contract_Decision_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>