src/main/default/objects/DNBI__Decision_Rules__c/fields/DNBI__Credit_Decision_History__c.field-meta.xml
<CustomField>
    <fullName>DNBI__Credit_Decision_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Decision History</label>
    <referenceTo>DNBI__Credit_Decision_History__c</referenceTo>
    <relationshipLabel>History Decision Rules</relationshipLabel>
    <relationshipName>CDH_Decision_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>