src/main/default/objects/DNBI__Decision_Rules__c/fields/DNBI__Currency__c.field-meta.xml
<CustomField>
    <fullName>DNBI__Currency__c</fullName>
    <label>Source Currency</label>
    <length>20</length>
    <type>Text</type>
</CustomField>