src/main/default/objects/DNBI__Decision_Rules__c/fields/DNBI__Invoice__c.field-meta.xml
<CustomField>
    <fullName>DNBI__Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>DNBI__Invoice__c</referenceTo>
    <relationshipLabel>Decision Rules</relationshipLabel>
    <relationshipName>Decision_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>