src/main/default/objects/DNBI__Decision_Rules__c/fields/DNBI__Lead__c.field-meta.xml
<CustomField>
    <fullName>DNBI__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead Decision Rules</relationshipLabel>
    <relationshipName>Lead_Decision_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>