src/main/default/objects/DNBI__Decision_Rules__c/fields/DNBI__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>DNBI__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Decision Rules</relationshipLabel>
    <relationshipName>Opportunity_Decision_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>