src/main/default/objects/DNBI__Decision_Rules__c/fields/DNBI__Rule__c.field-meta.xml
<CustomField>
    <fullName>DNBI__Rule__c</fullName>
    <label>Rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>