src/main/default/objects/DNBI__Decision_Rules__c/fields/DNBI__Rule_Currency__c.field-meta.xml
<CustomField>
    <fullName>DNBI__Rule_Currency__c</fullName>
    <label>Rule Currency</label>
    <length>20</length>
    <type>Text</type>
</CustomField>