src/main/default/objects/DNBI__Decision_Rules__c/fields/DNBI__Rule_Type__c.field-meta.xml
<CustomField>
    <fullName>DNBI__Rule_Type__c</fullName>
    <label>Rule Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AND</fullName>
            </value>
            <value>
                <fullName>OR</fullName>
            </value>
            <value>
                <fullName>OVERRIDE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>