src/main/default/objects/DNBI__Decision_Rules__c/fields/DNBI__Value__c.field-meta.xml
<CustomField>
    <fullName>DNBI__Value__c</fullName>
    <description>Value without Currency</description>
    <label>Value wo Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>