src/main/default/objects/DNBI__Decision_Rules__c/fields/DNBI__ValueWithCurrency__c.field-meta.xml
<CustomField>
    <fullName>DNBI__ValueWithCurrency__c</fullName>
    <description>Value with Currency</description>
    <formula>IF( ISBLANK(DNBI__Value__c) , DNBI__Value__c, (DNBI__Rule_Currency__c + &apos; &apos; + DNBI__Value__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value</label>
    <type>Text</type>
</CustomField>